--- a/my_personal_website/src/Component/Contact/style.css
+++ b/my_personal_website/src/Component/Contact/style.css
@@ -59,10 +59,10 @@
 }
 .footer{
     background-color:black;
-    height: 30vh;
+    height: 32vh;
+    /* width: 100%; */
 }
 .footer_title{
-    width:100vw;
     color: white;
     letter-spacing:1px;
     font-size: 23px;
@@ -75,13 +75,14 @@
 }
 .socialmediaicon{
     height: 12vh;
-    width:100vw;
-    margin-left: auto;    margin-right: auto;
+    /* width:100vw; */
+    margin-left: auto;   
+     margin-right: auto;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.facebook{
+.facebook p{
     color:white;
     /* border: 3px solid white ; */
     height:7.9vh;
@@ -95,7 +96,7 @@
 color: white;
 font-size:17px;
 font-weight:700;
-width:100vw;
+/* width:100vw; */
 letter-spacing: 1px;
 }
 .footer_bottom p{
