Project_section_completed

--- a/my_personal_website/src/Component/Navbar/style.css
+++ b/my_personal_website/src/Component/Navbar/style.css
@@ -70,6 +70,7 @@ html{
 @media(max-width:644px){
     .navbar-item{
         display: none;
+        background-color: black;
     }
     .minimize-button{
         display: block;
