--- a/my_personal_website/src/Component/Navbar/style.css
+++ b/my_personal_website/src/Component/Navbar/style.css
@@ -73,12 +73,33 @@ html{
 }
 @media(max-width:644px){
     .navbar-item{
-        display: none;
-        background-color: black;
+      margin-top:62rem;
+      background-color: black;
+      width:100%;
+      height:50vh;
+     /* margin-left:30rem; */
+     margin-left: 100%;
+     position:fixed;
+     transition: all .5s;
+   
+    }
+    .navbar-item a{
+        display: block;
+        color: #ffffff;
+        padding-top:3rem;
+       
+    }
+    .navbar-item a:hover{
+        font-size: 2rem;
     }
     .minimize-button{
         display: block;
+        margin-left: -10rem;
     }
+    /* button:active .navbar-item{
+        margin-left:100%;
+        font-size: 2rem;
+    } */
 }
 @media(max-width:330px){
     html{
