--- a/my_personal_website/src/Component/Navbar/style.css
+++ b/my_personal_website/src/Component/Navbar/style.css
@@ -39,7 +39,6 @@ html{
   position: relative;
   font-weight: 700;
   opacity: 0.9;
-
 }
 .navbar-item a::before{
     content: "";
@@ -54,9 +53,46 @@ html{
 .navbar-item a:hover::before{
     width: 100%;
 }
+.navbar-item1{
+    display: none;
+    margin-top:103rem;
+    background-color:black;
+    width:100vw;
+    margin-left:-27.1rem;
+    height:90vh;
+    opacity:90%;
+    /* transition: all .5s; */
+}
+.navbar-item1 a{
+  color:white;
+  text-decoration: none;
+  text-align: center;
+  margin-top:8rem;
+  display:block;
+  font-size: 1.7rem;
+  position: relative;
+  font-weight: 700;
+}
+.navbar-item1 a::before{
+    content: "";
+    position:absolute;
+    left: 0;
+    bottom:-1rem;
+    width: 0%;
+    height:.22rem;
+    background:green;
+    transition: all .45s;
+}
+.navbar-item1 a:hover::before{
+    width: 100%;
+}
+
+
 .minimize-button{
   margin-right: 50px;
   display: none;
+  color:black;
+  font-size: 1.4rem;
 }
 
 @media(max-width:896px){
@@ -72,34 +108,37 @@ html{
    
 }
 @media(max-width:644px){
-    .navbar-item{
-      margin-top:62rem;
-      background-color: black;
-      width:100%;
-      height:50vh;
-     /* margin-left:30rem; */
-     margin-left: 100%;
-     position:fixed;
-     transition: all .5s;
    
-    }
-    .navbar-item a{
-        display: block;
-        color: #ffffff;
-        padding-top:3rem;
-       
-    }
-    .navbar-item a:hover{
-        font-size: 2rem;
-    }
     .minimize-button{
         display: block;
         margin-left: -10rem;
     }
-    /* button:active .navbar-item{
-        margin-left:100%;
-        font-size: 2rem;
-    } */
+    .navbar-item{
+        display: none;
+    }
+    .navbar-item1{
+        display: block;
+    }
+    /* .navbar-item{
+        margin-top:62rem;
+        background-color: black;
+        width:100%;
+        height:50vh;
+       margin-left:30rem;
+       margin-left: 100%;
+       position:fixed;
+       transition: all .5s;
+      }
+      
+      .navbar-item a{
+          display: block;
+          color: #ffffff;
+          padding-top:3rem;
+         
+      }
+      .navbar-item a:hover{
+          font-size: 2rem;
+      } */
 }
 @media(max-width:330px){
     html{
