--- a/my_personal_website/src/Component/About/style.css
+++ b/my_personal_website/src/Component/About/style.css
@@ -125,6 +125,8 @@
 @media(max-width:550px){
     .aboutsection{
         display: block;
+        margin-left:-4rem;
+        margin-top:7rem;
     }
     .aboutPhoto{
     margin-left:20rem;
@@ -133,12 +135,13 @@
         width:50vw;
     }
     .abouttitle{
-        margin-left:33rem ;
+        margin-left: auto;
+        margin-right: auto;
         width:12vw;
         border-bottom:0.4rem solid #360F88;
     }
     .aboutmyself{
-        margin-left:25rem;
+        margin-left:22rem;
         margin-top:6rem;
         width:50vw ;
     }
