--- a/my_personal_website/src/Component/Navbar/style.css
+++ b/my_personal_website/src/Component/Navbar/style.css
@@ -151,5 +151,8 @@ html{
         font-size:35%;
     }
 }
-/* @media(max-width:500px{
-} */
+@media(max-width:500px){
+    .navbar-logo img{
+        width:8.5vw;
+    }
+}
