--- a/my_personal_website/src/Component/Home/style.css
+++ b/my_personal_website/src/Component/Home/style.css
@@ -154,10 +154,12 @@ border-radius:1rem;
     width:45vw;
   }
   .homeimages img{
-    /* width: 60vw; */
+    width: 60vw;
     width: auto;
     margin-top: -15rem;
-    margin-left:3rem;
+    /* margin-left:3rem; */
+    margin-left: auto;
+    margin-right: auto;
  
   }
   .homelink{
