--- a/my_personal_website/src/Component/Contact/style.css
+++ b/my_personal_website/src/Component/Contact/style.css
@@ -80,8 +80,8 @@ text-align: center;
 }
 .footer_title{
     color: white;
-    letter-spacing:1px;
-    font-size: 23px;
+    letter-spacing:0.1rem;
+    font-size: 2.3rem;
     margin-left: auto;
     margin-right: auto;
     font-weight:700;
@@ -104,16 +104,16 @@ text-align: center;
     height:7.9vh;
     width: 4vw;
     text-align: center;
-    margin-left:20px;
-    font-size:30px;
+    margin-left:2rem;
+    font-size:3rem;
 
 }
 .footer_bottom{
 color: white;
-font-size:17px;
+font-size:1.7rem;
 font-weight:700;
 /* width:100vw; */
-letter-spacing: 1px;
+letter-spacing:0.1rem;
 }
 .footer_bottom p{
     text-align: center;
@@ -201,9 +201,29 @@ letter-spacing: 1px;
     .contact_title{
         width:15vw;
     }
+    .box{
+      margin-left:18rem;
+    }
+    .textarea{
+        margin-left: 18rem;
+    }
+    .contact_button{
+        margin-left: 26rem;
+    }
 }
 @media(min-width:897px) and (max-width:1024px){
     .contact_title{
         width: 12vw;
     }
+}
+@media(max-width:468px){
+    .box{
+        margin-left:20rem;
+      }
+      .textarea{
+          margin-left:20rem;
+      }
+      .contact_button{
+        margin-left: 28rem;
+      }
 }
