Updated portofolio with new changes

--- a/my_personal_website/src/Component/About/style.css
+++ b/my_personal_website/src/Component/About/style.css
@@ -1,182 +1,130 @@
-.abouttitle{
+/* About Title */
+.abouttitle {
     font-size: 3rem;
     font-weight: 750;
     margin-left: auto;
     margin-right: auto;
-    color: #360F88;
-    margin-top:0.4rem;
-    width:6vw;
-}
-.abouttitle:after{
+    color: rgb(155, 72, 25);
+    margin-top: 0.4rem;
+    width: 6vw;
+    animation: fadeIn 2s ease-in-out; /* Add animation to the About header */
+  }
+  .abouttitle:after {
     content: '';
     position: absolute;
-    left: 50%;
-    bottom:-25%;
+    left: 60%;
+    bottom: -25%;
     transform: translateX(-50%);
     width: 100px;
-    height:4px;
-    background-color: #360F88;
+    height: 4px;
+    background-color: rgb(155, 72, 25);
     border-radius: 2px;
+  }
+  
+  /* Keyframes for fade-in animation */
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
     }
-
-.aboutsection{
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  /* About Section Layout */
+  .aboutsection {
     display: flex;
-}
-.aboutPhoto{
-    width:27vw;
-    height: 70vh;
-    margin-left: 20rem;
+    flex-direction: column;
     margin-top: 5rem;
-}
-.aboutPhoto img{
-    width: 25vw;
-    height: 70vh;
-    border-radius:50rem;
-}
-.aboutmyself{
-    height: 25vh;
-    width: 30vw;
-   margin-left:20rem;
-   margin-top: 3rem;
-   /* border-bottom: 1px solid black; */
-}
-.aboutmyself h2{
-    font-size:2.5rem;
-    font-weight:700;
-}
-.aboutmyself p{
-    font-size:1.7rem;
-    font-weight: 500;
-    opacity: 80%;
-    margin-top:1rem;
-}
-.abouteducation{
-    width: 31vw;
-    border-top:0.2rem solid black ;
-    height: 50vh;
-}
-.abouteducation h2{
-    font-weight:700;
-    opacity: 99%;
-}
-.abouteducation p{
-    font-size:1.7rem;
-    font-weight:640;
-    color:#360F88;
-}
-.abouteducation span{
+  }
+  
+  .aboutmyself {
+    margin: 0 auto;
+    width:85%;
+    text-align: center;
+  }
+  
+  
+  .aboutmyself p {
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: black;
+    /* opacity: 80%; */
+    margin-top: 1rem;
+    font-family: sans-serif;
+    
+  }
+  
+  /* Box Styling */
+  .educationbox,
+  .experiencebox,
+  .publicationbox {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+  }
+  
+  .boxcontent {
+    background-color: #f4f4f9;
+    padding: 20px;
+    text-align: center;
+    margin: 10px auto; /* Center the box */
+    width: 95%; /* Restrict the width to 80% */
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .boxcontent h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    color:rgb(155, 72, 25);
+  }
+  
+  .boxcontent p {
+    font-size: 1.8rem;
+    color: black;
+    font-weight: bold;
+  }
+  
+  .boxcontent span {
     font-size: 1.5rem;
-    font-weight:780;
-    color: #360F88;
-}
-@media(max-width:896px){
-    .aboutmyself{
-        margin-left:17rem;
-        width:29vw;
-        margin-top:3rem;
+    font-weight:700;
+    color: black;
+  }
+  
+  /* Hover Effect */
+  .boxcontent:hover {
+    transform: scale(1.05); /* Make box slightly bigger */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); /* Add deeper shadow */
+  }
+  
+  /* Section Headers */
+  .abouteducation h3,
+  .aboutexperience h3,
+  .aboutpublications h3 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: rgb(155, 72, 25);
+    text-align: center;
+    margin-bottom: 1.5rem;
+  }
+  
+  /* Responsive Design */
+  @media(max-width: 896px) {
+    .aboutsection {
+      padding: 0 20px;
     }
-    .aboutPhoto{
-        margin-left:12rem;
+  
+    .aboutmyself {
+      margin-bottom: 2rem;
+      width: 100%;
     }
-    .aboutPhoto img{
-        width: 36vw;
+  
+    .boxcontent {
+      padding: 15px;
     }
-    .abouteducation{
-        width:35vw;
-     }
-     .abouttitle{
-        width:8vw;
-    }
-}
-@media(min-width:896px) and (max-width:1024px){
-    .aboutmyself{
-        margin-left: 10rem;
-        width:40vw;
-    }
-    .aboutPhoto{
-        margin-left:10rem;
-    }
-    .abouteducation{
-       width:40vw;
-    }
-    .aboutPhoto img{
-        width: 30vw;
-    }
-    .abouttitle{
-        width:10vw;
-        }
-
-}
-@media(min-width:1024px) and (max-width:1200px) {
-    .aboutPhoto{
-        margin-left:10rem;
-    }
-    .abouttitle{
-        width:8vw;
-
-        }
-}
-@media(max-width:660px){
-.aboutPhoto{
-    margin-left:5rem;
-}
-.aboutPhoto img{
-    width: 39vw;
-}
-.aboutmyself{
-    margin-left:20rem;
-}
-.abouttitle{
-    width:10vw;
-}
-}
-@media(max-width:550px){
-    .aboutsection{
-        display: block;
-        margin-left:-4rem;
-        margin-top:7rem;
-    }
-    .aboutPhoto{
-    margin-left:20rem;
-    }
-    .aboutPhoto img{
-        width:50vw;
-    }
-    .abouttitle{
-        margin-left: auto;
-        margin-right: auto;
-        width:12vw;
-    }
-    .aboutmyself{
-        margin-left:22rem;
-        margin-top:6rem;
-        width:50vw ;
-    }
-    .abouteducation{
-        width:50vw;
-    }
-}
-@media(max-width:500px){
-    .abouttitle{
-        margin-left:20rem;
-    }
-    .aboutPhoto{
-        margin-left:8rem;
-        /* margin-left: auto;
-        margin-right: auto; */
-        }
-        .aboutPhoto img{
-            width: auto;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .aboutmyself{
-            margin-left:15rem;
-            margin-top:6rem;
-            width:60vw ;
-        }
-        .abouteducation{
-            width: 60vw;
-            
-        }
-}
+  }
+  
