--- a/my_personal_website/src/Component/Home/style.css
+++ b/my_personal_website/src/Component/Home/style.css
@@ -1,169 +1,103 @@
-.home-details{
-    font-size:4.4rem;
-    font-weight: 700;
-    letter-spacing:.1rem;
-    height:50vh;
-    width:40vw;
-    margin-top:13rem ;
-    margin-left:25rem ;
-    /* margin-right: auto;
-    margin-left: auto; */
-    font-style:  'Poppins', sans-serif;
+/* Global Styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.home-details span{
-    color: #360F88;
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
 }
-/* .home-button button{
-font-size:2rem;
-width:10vw;
-height:6.1vh;
-border-radius:0.8rem;
-background-color: #360F88;
-color: white;
-font-weight: 500;
-} */
-.h-button button{
- width:18vw;
- font-size: 2.2rem;
- font-weight:600;
- text-align: center;
- height:7vh;
- background-color: #360F88;
-border-radius:1rem;
+
+.Home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  padding: 0 5vw;
 }
-.h-button button:hover{
-  background-color: #360F88;
-}
-.homeimages{
-    height:60vh;
-    width:35vw;
-    margin-top:1rem;
-    margin-left:5rem;
-    /* margin-right: auto;
-    margin-left: auto; */
-}
-.homeimages img{
-    /* height:42vh; */
-    width:23vw;
-    border-radius: 50%;
-    margin-top: 15rem;
-}
-.Home{
-    display: flex;
-}
-.homelink{
-    width: 20vw;
-    margin-left:30rem;
-    margin-top:10rem;
-}
-.homelink img{
-   width:2vw;
-   margin-right: 4rem;
-}
-@media(min-width:896px) and (max-width:1089px){
-  .home-details{
-    margin-top:10rem ;
-    margin-left:19rem ;
-    font-size:3rem;
-  }
-  .homelink{
-    margin-top:5rem;
-  }
-  .homelink img{
-    width:2vw;
-    margin-right: 4rem;
- }
- .homeimages img{
-    height:45vh;
-    width:30vw;
-    border-radius: 50%;
-    margin-top: 10rem;
-}
-}
-@media(min-width:1089px){
-      .home-button button{
-        height:6.5vh;
-      }
-      .homelink img{
-        width:2vw;
-        margin-right: 4rem;
-     }
-}
-@media(max-width:873px){
-    .home-details{
-        margin-top:10rem ;
-        margin-left:19rem ;
-        font-size:3rem;
-      }
-      .homeimages img{
-        height:40vh;
-        width:31vw;
-        border-radius: 50%;
-        margin-top: 12rem;
-    }
-    .homelink img{
-        width:3vw;
-        margin-right: 4rem;
-     }
-     .home-button button{
-        width: 15vw;
-      }
-}
-@media(max-width:597px){
-    .home-details{
-        margin-top:10rem ;
-        margin-left:25rem ;
-        width: 55vw;
-        font-size:2.8rem;
-      }
-      .homeimages img{
-        height:40vh;
-        width:50vw;
-        border-radius: 50%;
-        margin-top:-13rem;
-        margin-left:10rem;
-    }
-    .homelink img{
-        width:4vw;
-        margin-right: 3rem;
-     }
-     .Home{
-        display: block;
-     }
-     .homelink{
-        width: 30vw;
-        margin-left:25rem; 
-        margin-top:-15rem ; 
-      }
-      .home-button button{
-        width: 20vw;
-      }
-}
-@media(max-width:500px){
-  .home-details{
-    margin-left:10rem;
-    width:80vw;
-  }
-  .home-details p{
-    margin-top:10rem;
-  }
-  .h-button{
-    margin-top:5rem;
-  }
-  .h-button button{
-    width:45vw;
-  }
-  .homeimages img{
-    width: 60vw;
-    width: auto;
-    margin-top: -15rem;
-    /* margin-left:3rem; */
-    margin-left: auto;
-    margin-right: auto;
+
+.home-details {
+  font-size: 4rem; /* Increased font size */
+  font-weight: 700;
+  letter-spacing: .1rem;
+  width: 50%;
+  text-align: left;
  
+}
+
+.home-details strong {
+  font-size: 6rem; /* Increased font size for the name */
+  color: rgb(155, 72, 25);
+  font-family: "YADK4O60vp0 0", auto;
+}
+
+.home-details p {
+  margin-top: 1rem;
+  font-size: 2.2rem; /* Increased font size for description */
+  color: #080202;
+}
+
+.homeimages {
+  width: 50%;
+  text-align: center;
+}
+
+.homeimages img {
+  width: 80%;
+  height: auto;
+  border-radius: 50%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Responsive Styles */
+@media(max-width: 1024px) {
+  .Home {
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
   }
-  .homelink{
-    margin-top:-25rem;
-    margin-left:20rem;
-      }
+
+  .home-details {
+    font-size: 3rem; /* Adjusted for medium screens */
+    text-align: center;
+    width: 100%;
+  }
+
+  .homeimages {
+    width: 100%;
+    margin-top: 3rem;
+  }
+
+  .homeimages img {
+    width: 60%;
+  }
+}
+
+@media(max-width: 768px) {
+  .home-details {
+    font-size: 2.5rem; /* Adjusted for smaller screens */
+  }
+
+  .homeimages img {
+    width: 70%;
+  }
+}
+
+@media(max-width: 480px) {
+  .Home {
+    padding: 0 2rem;
+  }
+
+  .home-details {
+    font-size: 2rem; /* Adjusted for small screens */
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .homeimages img {
+    width: 80%;
+  }
 }
