--- a/my_personal_website/src/Component/Navbar/style.css
+++ b/my_personal_website/src/Component/Navbar/style.css
@@ -1,170 +1,171 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-html{
-    font-size:62.5%;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.Navbar{
+html {
+    font-size: 62.5%;
+}
+
+.Navbar {
     height: 10vh;
-    /* background-color:white; */
-        background-color:#ECECEC;
+    background-color: white; /* Darker background for the navbar */
     display: flex;
-    position:sticky;
-    top: 0px;
-    z-index:1000;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     align-items: center;
-    justify-content:space-between;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;}
-    .navbar-logo{
-        display: flex;
-        align-items: center;
-    }
- .navbar-logo p{
-    color:black;
-    font-size: 2.1rem;
+    justify-content: space-between;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px; /* Softer shadow */
+    padding: 0 2rem;
+}
+
+.navbar-logo {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-logo p {
+    color: black; /* Lighter text color */
+    font-size: 2.3rem;
     font-weight: 700;
+    margin-top: 1.6rem;
+    margin-left: 1.6rem;
 }
-.navbar-logo span{
-    color:#360F88;
+
+.navbar-logo span {
+    color: rgb(155, 72, 25); /* Soft blue for contrast */
 }
-.navbar-logo img{
-    width:3vw;
-    border-radius:90%;
-    margin:5rem;
+
+.navbar-logo img {
+    width: 3vw;
+    border-radius: 50%;
+    margin-right: 1rem;
 }
-.navbar-item a{
-  color:black;
-  text-decoration: none;
-  margin:3rem;
-  font-size: 1.7rem;
-  position: relative;
-  font-weight: 700;
-  opacity: 0.9;
+
+.navbar-item {
+    display: flex;
 }
-.navbar-item a::before{
+
+.navbar-item a {
+    color: black; /* Lighter text color for links */
+    text-decoration: none;
+    margin: 0 2rem;
+    font-size: 1.7rem;
+    font-weight: 700;
+    position: relative;
+    opacity: 0.9;
+    transition: color 0.3s;
+}
+
+.navbar-item a:hover {
+    color: rgb(155, 72, 25); /* Updated hover color for Home and About */
+}
+
+.navbar-item a::before {
     content: "";
-    position:absolute;
+    position: absolute;
+    bottom: -0.5rem;
     left: 0;
-    bottom:-1rem;
-    width: 0%;
-    height:.22rem;
-    background:green;
-    transition: all .45s;
+    width: 0;
+    height: 0.2rem;
+    background: rgb(155, 72, 25); /* Mint green underline effect */
+    transition: width 0.3s;
 }
-.navbar-item a:hover::before{
+
+.navbar-item a:hover::before {
     width: 100%;
 }
-.navbar-item1{
+
+.navbar-item1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 10vh; /* Start the sidebar below the navbar */
+    right: 0;
+    width: 20vw;
+    height: auto; /* Fit height based on content */
+    min-height: 10vh; /* Ensure height is at least equal to the navbar */
+    background-color: white; /* Darker sidebar background */
+    z-index: 999;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in-out;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.navbar-item1.show {
+    transform: translateX(0);
+}
+
+.navbar-item1 a {
+    color: black; /* Lighter text color for sidebar links */
+    text-decoration: none;
+    margin: 2rem 0;
+    font-size: 1.8rem;
+    font-weight: 700;
+    transition: color 0.3s;
+}
+
+.navbar-item1 a:hover {
+    color: rgb(155, 72, 25);; /* Mint green on hover */
+}
+
+.minimize-button {
+    margin-right: 2rem;
     display: none;
-    margin-top:103rem;
-    background-color:black;
-    width:100vw;
-    margin-left:-27.1rem;
-    height:90vh;
-    opacity:90%;
-    /* transition: all .5s; */
-}
-.navbar-item1 a{
-  color:white;
-  text-decoration: none;
-  text-align: center;
-  margin-top:8rem;
-  display:block;
-  font-size: 1.7rem;
-  position: relative;
-  font-weight: 700;
-}
-.navbar-item1 a::before{
-    content: "";
-    position:absolute;
-    left: 0;
-    bottom:-1rem;
-    width: 0%;
-    height:.22rem;
-    background:green;
-    transition: all .45s;
-}
-.navbar-item1 a:hover::before{
-    width: 100%;
+    color: black; /* Updated color for the minimize button */
+    font-size: 2rem; /* Slightly smaller size */
+    cursor: pointer;
 }
 
-
-.minimize-button{
-  margin-right: 50px;
-  display: none;
-  color:black;
-  font-size: 1.4rem;
+.minimize-button:hover {
+    color: rgb(155, 72, 25);; /* Mint green on hover */
 }
 
-@media(max-width:896px){
-  html{
-    font-size:50%;
-  }
+@media (max-width: 896px) {
+    html {
+        font-size: 50%;
+    }
 }
-@media(max-width:715px)
-{
-    html{
+
+@media (max-width: 715px) {
+    html {
         font-size: 45%;
     }
-    .navbar-logo img{
+
+    .navbar-logo img {
         width: 5vw;
     }
-   
 }
-@media(max-width:644px){
-   
-    .minimize-button{
+
+@media (max-width: 644px) {
+    .minimize-button {
         display: block;
-        margin-left: -10rem;
-    }
-    .navbar-item{
-        display: none;
-    }
-    .navbar-item1{
-        display: block;
-    }
-    .navbar-logo img{
-        width:7vw;
-    }
-    /* .navbar-item{
-        margin-top:62rem;
-        background-color: black;
-        width:100%;
-        height:50vh;
-       margin-left:30rem;
-       margin-left: 100%;
-       position:fixed;
-       transition: all .5s;
-      }
-      
-      .navbar-item a{
-          display: block;
-          color: #ffffff;
-          padding-top:3rem;
-         
-      }
-      .navbar-item a:hover{
-          font-size: 2rem;
-      } */
-}
-@media(max-width:330px){
-    html{
-        font-size:35%;
-    }
-}
-@media(max-width:500px){
-    .navbar-logo img{
-        width:8.5vw;
-    }
-}
-@media(max-width:468px){
-    .navbar-logo img{
-        width:9.2vw;
-    }
-    .navbar-logo p{
-        font-size:2.2rem;
     }
 
+    .navbar-item {
+        display: none;
+    }
+
+    .navbar-logo img {
+        width: 6vw;
+    }
+}
+
+@media (max-width: 500px) {
+    .navbar-logo img {
+        width: 7.5vw;
+    }
+}
+
+@media (max-width: 468px) {
+    .navbar-logo img {
+        width: 9vw;
+    }
+
+    .navbar-logo p {
+        font-size: 1.8rem;
+    }
 }
